<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="#fff"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_one_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/v_one_login"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="#E1C639" />

        <RelativeLayout
            android:layout_marginTop="90dp"
            android:id="@+id/rl_two_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_one_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/transport_ledger"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_one_login"
                android:layout_marginLeft="10dp"
                android:text="@string/have_a_safe_journey"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="15sp" />

        </RelativeLayout>

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        app:cardUseCompatPadding="false"
        app:cardPreventCornerOverlap="false"
        android:id="@+id/cv_one_login"
        app:cardBackgroundColor="#fcfcfc"
        android:layout_marginTop="180dp"
        card_view:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        android:elevation="10dp"
        android:layout_centerHorizontal="true"
        android:layout_width="360dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:gravity="top"
                android:text="Login"
                android:textAppearance="@style/login" />

            <TextView
                android:id="@+id/new_user_re"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="New User Registration"
                android:onClick="nerw"
                android:layout_marginRight="30dp"
                android:textStyle="bold"
                android:textAppearance="@style/new_user_re"
                android:gravity="right"
                />


            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_margin="20dp"
                android:ems="10"
                android:hint="Enter Mobile Number"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:text=""

                android:textColor="@color/black"
                android:textColorHint="#696969" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_margin="20dp"
                android:ems="10"
                android:hint="@string/enter_pw"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="#696969" />
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:weightSum="2"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/btnbg"
        android:text="Sign In"
        android:layout_weight="1"
        android:textColor="#0C0B0B"
        android:layout_margin="10dp"
        android:textStyle="bold"
        app:cornerRadius="35dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:layout_gravity="center"

        android:text="Forgot Password"></TextView>
</LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="New User?"
                android:visibility="gone"

                android:textColor="#7B1FA2"
                android:textSize="16dp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/button2"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#E1C639"
                android:text="Sign UP"
                android:textColor="#0C0B0B"
                android:visibility="gone"
                android:textStyle="bold"
                app:cornerRadius="35dp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/rl_one_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="197dp"
        android:elevation="15dp"
        android:visibility="gone"

        android:text="Sign up"
        app:backgroundTint="@color/purple_200" />

</RelativeLayout>