<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/rl_one_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/v_one_login"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#E1C639" />

        <RelativeLayout
            android:layout_marginTop="90dp"
            android:id="@+id/rl_two_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_one_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/transport_ledger"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_one_login"
                android:layout_marginLeft="10dp"
                android:text="@string/have_a_safe_journey"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="15sp" />
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="-1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/white"
                tools:context=".MainActivity6">

                <TextView
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:text="logo here">

                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/explcabname"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_one_login"
                    android:layout_marginLeft="10dp"
                    android:text="@string/vegenum"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button4"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_margin="20dp"
                    android:onClick="newbooking"
                    android:backgroundTint="@color/btnbg"
                    android:layout_height="wrap_content"
                    android:text="New Booking" />

                <androidx.appcompat.widget.AppCompatButton

                    android:id="@+id/button5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="tripsh"

                    android:layout_margin="20dp"

                    android:backgroundTint="@color/btnbg"
                    android:padding="10dp"

                    android:text="Trip Sheet" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button6"
                    android:onClick="dash"
                    android:padding="10dp"
                    android:layout_margin="20dp"

                    android:layout_width="match_parent"
                    android:backgroundTint="@color/btnbg"
                    android:layout_height="wrap_content"
                    android:text="Dashboard" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textColor="#000"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Powered By" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/am" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>



<!--
<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="#fff"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/rl_one_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/v_one_login"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="#E1C639" />

        <RelativeLayout
            android:layout_marginTop="90dp"
            android:id="@+id/rl_two_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:id="@+id/tv_one_login"
                android:textSize="32sp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:text="T R I P S H E E T"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_one_login"
                android:text="CONNECTING PEOPLE"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="15sp" />

        </RelativeLayout>

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        app:cardUseCompatPadding="false"
        app:cardPreventCornerOverlap="false"
        android:id="@+id/cv_one_login"
        app:cardBackgroundColor="#fcfcfc"
        android:layout_marginTop="180dp"
        card_view:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        android:elevation="10dp"
        android:layout_centerHorizontal="true"
        android:layout_width="360dp"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/white"
            tools:context=".MainActivity6">

            <TextView
                android:layout_width="match_parent"
                android:gravity="center"

                android:layout_height="wrap_content"
                android:text="logo here"></TextView>
            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:onClick="newbooking"
                android:backgroundTint="@color/btnbg"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="New Booking" />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:onClick="tripsh"
                android:backgroundTint="@color/btnbg"

                android:text="Trip Sheet" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button6"
                android:layout_margin="10dp"
                android:onClick="dash"
                android:layout_width="match_parent"
                android:backgroundTint="@color/btnbg"

                android:layout_height="wrap_content"
                android:text="Dashboard" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/rl_one_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="197dp"
        android:elevation="15dp"
        android:visibility="gone"

        android:text="Sign up"
        app:backgroundTint="@color/purple_200" />

</RelativeLayout>

-->
